syntax = "proto3";

import "machinist/rpc/actions.proto";

package machinist;

message PollRequest {
  oneof req {
    // Sent only once, when the client first connects.
    ClientRegister register = 1;
    // Sent periodicially, the server just replies with an ActionPong.
    ClientPing ping = 2;
    // Sent after completing an operation on behalf of the server.
    ClientResult result = 3;
  }
}

message PollResponse {
  oneof resp {
    // Response to a ClientRegister.
    ActionResult result = 1;
    // Response to a ClientPing.
    ActionPong pong = 2;

    ////////////////////////
    // Operations the server can ask the client to complete.

    // Starts an independent session.
    ActionSession start = 3;
    // Send a file.
    ActionUpload upload = 4;
    // Receive a file.
    ActionDownload download = 5;
  }
}

// Client sends a file to the server, as a result of processing an ActionUpload.
message UploadRequest {
  // required in the first request only.
  string key = 1;
  // optional. If it is provided, it is processed in the first request only.
  int32 total = 2;

  bytes data = 3;
}
message UploadResponse {
}

// Client downloads a file from the server, as a result of a processing an ActionDownload.
message DownloadRequest {
  string key = 1;
}
message DownloadResponse {
  bytes data = 1;
}

// Controller is the service that workers will connect to to register themselves,
// and poll for actions to perform.
//
// Workers can be behind NAT or firewalls, or not have an IP address. The
// entire protocol is designed around workers connecting to an controller.
service Controller {
  // Poll is the first request performed by the client. It is our main control channel.
  // The client parses loops over the PollResponses, and performs the action requested.
  rpc Poll(stream PollRequest) returns (stream PollResponse) {}

  // The client will invoke Upload when the server requests the client to upload a file.
  rpc Upload(stream UploadRequest) returns (UploadResponse) {}
  // The client will invoke Download when the server requests the client to upload a file.
  rpc Download(DownloadRequest) returns (stream DownloadResponse) {}
}

enum ReserveRequestType {
  List = 0; // Returns list of currently reserved nodes according to the request.
  Reserve = 1; // Attempts to reserve a machine.
}

message ReservedMachine {
  int64 start = 1; // Start date of the reservation
  int64 end  = 2; // End date of the reservation
  bytes user = 3; // User who has reserved the machine
  repeated bytes ip = 4; // IP address of the reserved machine
  bytes name = 5; // Name of the machine
}

message ReserveRequest {
  ReserveRequestType type = 1;
  int64 start = 2; // Start date of the reservation
  int64 end  = 3; // End date of the reservation
  bytes name = 4; // Name of the machine to reserve
  bytes user = 5; // User of the machine
}

message ReserveResponse {
  repeated ReservedMachine machines = 1; // List of all reserved machines
}

service User {
  rpc Reserve(ReserveRequest) returns (ReserveResponse) {}
}
